Battle.net blog post
* Added tags to posts and tag page
* Spruced up home page, title, and about page

--- a/_posts/2020-12-25-Flare-On-2020-Intro.markdown
+++ b/_posts/2020-12-25-Flare-On-2020-Intro.markdown
@@ -1,6 +1,7 @@
 ---
 title: "Flare-On 2020 Challenges"
 date: 2020-12-25 00:07:00
+tags: [ctf, flareon, reversing]
 ---
 This was my first reverse engineering capture the flag.
 
